==========

This file summarizes changes between releases of Obnam.

NOTE: Obnam has an **EXPERIMENTAL** repository format under
development, called `green-albatross`. It is **NOT** meant for real
use. It is likely to change in incompatible ways without warning. Do
not use it unless you're willing to lose your backup.

Version 1.20, released UNRELEASED
---------------------------------

Bug fixes:

* The manual and manual page used to claim you could break only the
  locks for one client. This was not true. The manuals has been fixed.

Version 1.19.1, released 2016-01-30
---------------------------------

Bug fix:

* The check for paramiko version turned out not to work with
  versions 1.7.8 through 1.10.4, due to the
  `paramiko.__version_info__` variable being missing. It's there in
  earlier and later versions. Lars Wirzenius added code to make the
  check work if the `paramiko.__version__` variable is there. Jan
  Niggemann provided research and testing.

Version 1.19, released 2016-01-15
---------------------------------

Bug fixes:

* Backup no longer ignores a closed SSH connection. This means it
  won't keep trying to use it, forever. Instead, it crashes and
  terminates the backup.

* The Paramiko SSH implementation, which Obnam uses, changed the
  interface to the `prefetch` method in its 1.16 version. Obnam can
  now deal with either variant of the method. Found and reported by
  Kyle Manna, who provided a patch that Lars Wirzenius rewrote to be
  backwards compatible to older versions of Paramiko.

Improvements to the manual:

* The manual now has an appendix listing all Obnam errors, with codes
  and explanations. This will need to be updated manually from time to
  time.

* The manual now has sections on turning on full debug logging and
  reporting problems.

Improvements to functionality:

* The output of `obnam generations` now show time zone. Lars Wirzenius
  implemented based on suggestion by Limdi.

Version 1.18.2, released 2015-11-15